--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
 outcome==1.2.0
+packaging==23.1
 pyaes==1.6.1
 pyasn1==0.4.8
 pycodestyle==2.10.0
@@ -33,9 +34,11 @@ starlette==0.26.1
 telebot==0.0.4
 Telethon==1.26.1
 tomli==2.0.1
+tqdm==4.65.0
 trio==0.22.0
 trio-websocket==0.9.2
 typing_extensions==4.5.0
 urllib3==1.26.14
 uvicorn==0.21.1
+webdriver-manager==3.8.6
 wsproto==1.2.0
